--- a/index.html
+++ b/index.html
@@ -174,7 +174,9 @@
 
 
         </main>
-        <footer></footer>
+        <footer>
+            copyright2024 By:TheLegMVP
+        </footer>
     </body>
 
 
