--- a/index.html
+++ b/index.html
@@ -1,186 +1,174 @@
 <!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quiz para Programadores</title>
+    <meta name="description" content="Um quiz para programadores">
+</head>
+<body>
+    <header>
+        <h1>Quiz Interativo para Programadores</h1>
+        <p>Teste seus conhecimentos em programação e veja qual pontuação você consegue alcançar!</p>
+    </header>
 
-<html>
-    <head>
-        <title>Quiz para programadores</title>
-        <meta name="description" content="Um quiz para programadores">
-    </head>
+    <main>
+        <section>
+            <h2>Sobre este Quiz</h2>
+            <p>Este quiz foi desenvolvido para testar seus <strong>conhecimentos em programação</strong>, incluindo linguagens de programação, conceitos básicos e mais.</p>
+            <p>Você encontrará diferentes tipos de perguntas, <em>incluindo múltipla escolha</em>, texto e data. <br>Desafie-se com este quiz.</p>
+            <p>Você poderá encontrar alguns acrônimos, como <abbr title="Hypertext Markup Language">HTML</abbr> e <abbr title="Cascading Style Sheets">CSS</abbr>, que são comumente usados em questões relacionadas ao desenvolvimento web.</p>
+        </section>
 
-    <body>
-        <header>
-<h1>Quiz interativo para programadores</h1>
-<p>teste seus conhecimentos em programaçao e veja quais pontuaçao voce consegue fazer!</p>
-        </header>
-
-        <main>
-            <!--Section de explicaçao do quiz]-->
-            <section>
-                <h2>Sobre esse quiz</h2>
-                <p>Este Quiz foi desnvolvido para testar seus <strong>conhecimentos em programaçao</strong>, como linguagens de programaçao, conceitos basicos e mais</p>
-                <P>voce encontrara diferentes tipos de perguntas, <em>incluindo multipla escolha</em>, texto e perguntas de data. <br>desafie-se com esse quiz</P>
-                <P> Voce podera encontrar alguns acronimos como <abbr title="hyper text markup lenguage">HTML</abbr> e <abbr title="cascading style sheets">CSS</abbr>, que sao comumente usado em questao relacionadas ao desenvolvimento web</P>
-            </section>
-            <!--Ppergunta 1: Multipla escolha-->
-            <section>
-<h2>qual linguagem é usada para estruturar paginas web?</h2>
-<form>
-    <input type="radio" value="Python" id="P1A" name="Pergunta 1">
-    <label for="P1A">Python</label><br>
-
-    <input type="radio" value="HTML" id="P1B" name="Pergunta 1">
-    <label for="P1B">HTMl</label><br>
-
-    <input type="radio" value="java script" id="P1C" name="Pergunta 1">
-    <label for="P1C">Java script</label><br>
-
-    <input type="radio" value="ruby" id="P1D" name="Pergunta 1">
-    <label for="P1D">ruby</label><br>
-
-</form>
-            </section>
-            <!--Pergunta 2:-->
-            <section>
-                <h2> Pergunta 2: Na URL Https://www.google.com o trecho google.com é o _____</h2>
-                <form>
-                    <input type="text" name="Pergunta 2" id="P2" placeholder=" Jack Cerol">
-                </form>
-               
-            </section>
-            <!--Pergunta 3: senha-->
-            <section>
-<h2>Pergunta 3: Escreva um exemplo de senha forte</h2>
-<form>
-    <input type="password" name="Pergunta 3" id="P3" placeholder="Senha do Cartão De Credito"> 
-</form>
-            </section>
-            <!---PErgunta 4-->
-            <section>
-            <h2> Pergunta 4: Em que ano foi criado o HTML? </h2>
+        <section>
+            <h2>Qual linguagem é usada para estruturar páginas web?</h2>
             <form>
-                <input type="date" name="Pergunta 4" id="P4A">
+                <input type="radio" id="P1A" name="pergunta1" value="Python">
+                <label for="P1A">Python</label><br>
+
+                <input type="radio" id="P1B" name="pergunta1" value="HTML">
+                <label for="P1B">HTML</label><br>
+
+                <input type="radio" id="P1C" name="pergunta1" value="JavaScript">
+                <label for="P1C">JavaScript</label><br>
+
+                <input type="radio" id="P1D" name="pergunta1" value="Ruby">
+                <label for="P1D">Ruby</label><br>
             </form>
-            </section>
-            <!--Pergunta 5-->
-            <Section>
-                <h2>Pergunta 5: Quais dessas tecnologia são concideradas linguagem de programaçao? </h2>
-                <form>
-            <input type="checkbox" id="P5A" name="Perrgunta 5" value="JavaScript">
-            <label for="P5A">JavaScript</label><br>
+        </section>
 
-            <input type="checkbox" id="P5B" name="Perrgunta 5" value="HTML">
-            <label for="P5A">HTML</label><br>
+        <section>
+            <h2>Pergunta 2: Na URL https://www.google.com, o trecho "google.com" é o _____</h2>
+            <form>
+                <input type="text" name="pergunta2" id="P2" placeholder="Digite sua resposta">
+            </form>
+        </section>
 
-            <input type="checkbox" id="P5A" name="Perrgunta 5" value="C#">
-            <label for="P5A">C#</label><br>
+        <section>
+            <h2>Pergunta 3: Escreva um exemplo de senha forte</h2>
+            <form>
+                <input type="password" name="pergunta3" id="P3" placeholder="Digite uma senha forte">
+            </form>
+        </section>
 
-            <input type="checkbox" id="P5A" name="Perrgunta 5" value=".Net">
-            <label for="P5A">.Net</label><br>
-                </form>
-            </Section>
-            <!--Pergunta 6-->
-            <section>
-                <h2> Pergunta 6: Faça o upload de um arquivo contendo um code HTML</h2>
-                <form >
-                    <input type="file" name="Pergunta 6" id="P6">
-                </form>
-            </section>
-            <!--Pergunta 7-->
-            <section>
-                <h2> Pergunta 7: selecione o atributo do input que defina o seu tipo</h2>
-                <form >
-                    <select name="Pergunta 7" id="P7">
-                        <option value="id">ID</option>
-                        <option value="type">type</option>
-                        <option value="placeholder">placeholder</option>
-                        <option value="JackCoachCerol">JackCoachCerol</option>
-                    </select>
-                </form>
-            </section>
-            <!--PErgunta 8-->
-            <section>
-                <h2>PErgunta 8: QUal linguagem de programaçao pelo logotipo a abaixo:</h2>
-                <img src="https://avatars.githubusercontent.com/u/132309825?v=4" alt="" width="150
-                " height="150">
-                <img src="https://1.bp.blogspot.com/-avaxN5Q-8_A/YDpwMElhG0I/AAAAAAAAL-U/07u6s-6n3esWb_2HPQv44jmtGaNI-UtQgCLcBGAsYHQ/s16000/javas.png" alt="" width="150" height="150">
+        <section>
+            <h2>Pergunta 4: Em que ano foi criado o HTML?</h2>
+            <form>
+                <input type="date" name="pergunta4" id="P4">
+            </form>
+        </section>
 
-                <form>
-                    <input type="text" id="P8" name="Pergunta 8" placeholder="JackScript?">
-                </form>
-            </section>
-            <!--tabela de pontuaçao-->
-            <section>
-                <h2>Tabela de pontuaçao</h2>
-                <table border="1">
-                    <thead>
-                        <tr>
-                            <th>
-                                pontuaçao
-                            </th>
-                            <th>avaliaçao</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td> 0-2</td>
-                            <td>Nao Desista! Siga AI-Universe e começe a aprender sobre programaçao e Inteligencias artificiais!</td>
-                        </tr>
-                        <tr>
-                            <td>3-4</td>
-                            <td>Voce ainda precisa melhorar. Que tal seguir a artificial universe?Nao vai se arrepender! </td>
-                        </tr>
-                        <tr>
-                            <td>5-7</td>
-                            <td>Top. Seu conhecimento esta aceitavel!</td>
-                        </tr>
-                        <tr>
-                            <td>8</td>
-                            <td>Ai sim. Voce sabe de programaçao! Siga AI-Universe e fique ainda mais por dentro!</td>
-                        </tr>
+        <section>
+            <h2>Pergunta 5: Quais destas tecnologias são consideradas linguagens de programação?</h2>
+            <form>
+                <input type="checkbox" id="P5A" name="pergunta5" value="JavaScript">
+                <label for="P5A">JavaScript</label><br>
+
+                <input type="checkbox" id="P5B" name="pergunta5" value="HTML">
+                <label for="P5B">HTML</label><br>
+
+                <input type="checkbox" id="P5C" name="pergunta5" value="C#">
+                <label for="P5C">C#</label><br>
+
+                <input type="checkbox" id="P5D" name="pergunta5" value=".NET">
+                <label for="P5D">.NET</label><br>
+            </form>
+        </section>
+
+        <section>
+            <h2>Pergunta 6: Faça o upload de um arquivo contendo um código HTML</h2>
+            <form>
+                <input type="file" name="pergunta6" id="P6">
+            </form>
+        </section>
+
+        <section>
+            <h2>Pergunta 7: Selecione o atributo do input que define o seu tipo</h2>
+            <form>
+                <select name="pergunta7" id="P7">
+                    <option value="id">ID</option>
+                    <option value="type">Type</option>
+                    <option value="placeholder">Placeholder</option>
+                    <option value="value">Value</option>
+                </select>
+            </form>
+        </section>
+
+        <section>
+            <h2>Pergunta 8: Qual linguagem de programação é representada pelo logotipo abaixo?</h2>
+            <img src="https://avatars.githubusercontent.com/u/132309825?v=4" alt="Logotipo de linguagem" width="150" height="150">
+            <img src="https://1.bp.blogspot.com/-avaxN5Q-8_A/YDpwMElhG0I/AAAAAAAAL-U/07u6s-6n3esWb_2HPQv44jmtGaNI-UtQgCLcBGAsYHQ/s16000/javas.png" alt="Logotipo de Java" width="150" height="150">
+            <form>
+                <input type="text" id="P8" name="pergunta8" placeholder="Digite o nome da linguagem">
+            </form>
+        </section>
+
+        <section>
+            <h2>Tabela de Pontuação</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Pontuação</th>
+                        <th>Avaliação</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>0-2</td>
+                        <td>Não desista! Continue aprendendo sobre programação e inteligência artificial.</td>
+                    </tr>
+                    <tr>
+                        <td>3-4</td>
+                        <td>Você ainda pode melhorar. Que tal seguir conteúdos educativos online?</td>
+                    </tr>
+                    <tr>
+                        <td>5-7</td>
+                        <td>Bom trabalho! Seu conhecimento está aceitável.</td>
+                    </tr>
+                    <tr>
+                        <td>8</td>
+                        <td>Parabéns! Você entende de programação!</td>
+                    </tr>
                 </tbody>
                 <tfoot>
                     <tr>
-                        <td colspan="2">
-                          Boa Sorte na sua Jornada amigo!   
-                        </td>
+                        <td colspan="2">Boa sorte na sua jornada, amigo!</td>
                     </tr>
                 </tfoot>
-                </table>
-            </section>
-            <!--lista de resposta-->
-            <section>
-                <h2>Verifique suas respostas</h2>
-                <details>
-                    <summary>Clique aqui para ver as respostas</summary>
+            </table>
+        </section>
+
+        <section>
+            <h2>Verifique suas Respostas</h2>
+            <details>
+                <summary>Clique aqui para ver as respostas</summary>
                 <ol>
                     <li>HTML</li>
-                    <li>DOMINIO</li>
-                    <li>SENHA</li>
+                    <li>Domínio</li>
+                    <li>Senha</li>
                     <li>1991</li>
-                    <li>JAVASCRIPT, JAVA</li>
-                    <li>ARQUIVO.HTML</li>
-                    <li>TYPE</li>
-                    <li>JAVA</li>
-                </details>
+                    <li>JavaScript, Java</li>
+                    <li>Arquivo .html</li>
+                    <li>Type</li>
+                    <li>Java</li>
                 </ol>
-            </section>
-            <!--formulario feedback-->
-            <section>
-                <h2>Formulario de feedback--</h2>
-                <form> 
-                    
-                    <input type="text" id="name" name="name">
-                    <input type="text" id="feedback" name="Diga Oque achou do site, como elogios e criticas tambem">
-            </section>
+            </details>
+        </section>
 
+        <section>
+            <h2>Formulário de Feedback</h2>
+            <form>
+                <label for="name">Nome:</label>
+                <input type="text" id="name" name="name"><br>
+                <label for="feedback">Feedback:</label>
+                <textarea id="feedback" name="feedback" placeholder="Diga o que achou do site, incluindo elogios e críticas"></textarea>
+                <br><button type="submit">Enviar Feedback</button>
+            </form>
+        </section>
+    </main>
 
-        </main>
-        <footer></footer>
-    </body>
-
-
-
-
-
-
-
+    <footer>
+        &copy; 2024 TheLegMVP. Todos os direitos reservados.
+    </footer>
+</body>
 </html>
